<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/app_list_results_content_description"
        />

    <com.mrmannwood.hexlauncher.view.KeyboardEditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@color/colorPrimary"
        android:singleLine="true"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textColor="@color/colorOnPrimary"
        android:textSize="16sp"
        android:hint="@string/app_list_search_edit_text_hint"
        android:textColorHint="@android:color/transparent"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/colorOnPrimary"
        />

</LinearLayout>