...

    <string name="unable_to_start_app">Unable to start app</string>
    <string name="no_app_selected">No app selected</string>

    <string name="menu_item_home_choose_wallpaper">Change Wallpaper</string>
    <string name="menu_item_home_manage_widgets">Manage Widgets</string>
    <string name="menu_item_home_settings">Settings</string>

    <string name="menu_item_uninstall_app_title">Uninstall</string>
    <string name="menu_item_app_details">App Details</string>
    <string name="menu_item_app_customize">Customize</string>

    <string name="preferences_role_set_home">Set Hex Launcher as Home app</string>

    <string name="preferences_category_feedback">Feedback</string>
    <string name="preferences_feedback_rate">Rate %s</string>

...
